[gd_scene load_steps=4 format=3 uid="uid://bsfft600marhg"]

[ext_resource type="Script" path="res://Game/Components/Bullets/bullet.gd" id="1_4bmv2"]
[ext_resource type="Texture2D" uid="uid://bwghybmnxn5qa" path="res://assets/Arts/spritesheets/WeaponsSheet.png" id="2_wn464"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jolbe"]
radius = 7.0

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_4bmv2")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jolbe")

[node name="Model" type="Sprite2D" parent="."]
texture = ExtResource("2_wn464")
hframes = 4
frame = 2

[node name="Visiblity_Notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Bullet_TimeOut" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="Visiblity_Notifier" to="." method="_on_visiblity_notifier_screen_exited"]
[connection signal="timeout" from="Bullet_TimeOut" to="." method="_on_bullet_time_out_timeout"]
